--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@amcharts/amcharts5": "^5.13.5",
     "@amcharts/amcharts5-geodata": "^5.1.4",
-    "@angular/cdk": "^20.0.6",
+    "@angular/cdk": "^21.0.6",
     "@angular/common": "^21.0.8",
     "@angular/compiler": "^21.0.8",
     "@angular/core": "^21.0.8",
@@ -21,9 +21,10 @@
     "@angular/platform-browser-dynamic": "^21.0.8",
     "@angular/router": "^21.0.8",
     "@fullcalendar/angular": "^6.1.19",
-    "@fullcalendar/daygrid": "^6.1.19",
-    "@fullcalendar/interaction": "^6.1.19",
-    "@fullcalendar/timegrid": "^6.1.19",
+    "@fullcalendar/core": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/prismjs": "^1.26.5",
