--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/prismjs": "^1.26.5",
+    "angular-oauth2-oidc": "^20.0.2",
     "apexcharts": "^5.3.2",
     "flatpickr": "^4.6.13",
     "ng-apexcharts": "^2.0.0",
