--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ frontend:
         - npm run build
 
   artifacts:
-    baseDirectory: dist/devflowfix/broswer
+    baseDirectory: dist/devflowfix/browser
     files:
       - '**/*'
 
