updated angular to 21.1.1 and also migrated karma test to vitest @

--- a/angular.json
+++ b/angular.json
@@ -119,23 +119,10 @@
           "builder": "@angular/build:extract-i18n"
         },
         "test": {
-          "builder": "@angular/build:karma",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            "runnerConfig": "vitest.config.ts",
+            "tsConfig": "tsconfig.spec.json"
           }
         }
       }
