--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,9 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "vitest/globals",
+      "zone.js",
+      "zone.js/testing"
     ]
   },
   "include": [
