--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
+    "wasm:build": "cd wasm && wasm-pack build --target web --out-dir pkg",
+    "wasm:build:dev": "cd wasm && wasm-pack build --target web --out-dir pkg --dev",
+    "prebuild": "wasm-pack --version && npm run wasm:build || echo 'wasm-pack not found, using pre-built wasm/pkg'",
+    "prestart": "wasm-pack --version && npm run wasm:build:dev || echo 'wasm-pack not found, using pre-built wasm/pkg'",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -28,7 +32,6 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/prismjs": "^1.26.5",
-    "angular-oauth2-oidc": "^20.0.2",
     "apexcharts": "^5.3.2",
     "flatpickr": "^4.6.13",
     "ng-apexcharts": "^2.0.0",
@@ -39,7 +42,8 @@
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "devflowfix-wasm": "file:wasm/pkg"
   },
   "devDependencies": {
     "@angular/build": "^21.1.1",
