--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -13,7 +13,10 @@ crate-type = ["cdylib", "rlib"]
 wasm-bindgen = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
+serde_json = "1"
 js-sys = "0.3"
+regex = "1"
+once_cell = "1"
 
 [profile.release]
 opt-level = "s"
