--- a/k8s/networkpolicy.yaml
+++ b/k8s/networkpolicy.yaml
@@ -15,11 +15,14 @@ spec:
     - Ingress
     - Egress
   ingress:
-    # Allow traffic from Traefik ingress controller
+    # Allow traffic from kgateway proxy (Gateway API)
     - from:
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: traefik
+              kubernetes.io/metadata.name: devflowfix
+          podSelector:
+            matchLabels:
+              gateway.networking.k8s.io/gateway-name: devflowfix-gateway
       ports:
         - protocol: TCP
           port: 80
